[package]
name = "vexination-walker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
clap = "4.3.3"
humantime = "2.1.0"
log = "0.4"
csaf-walker = { version = "=0.6.0-alpha.6", default-features = false, features = ["crypto-openssl"] }
serde_json = "1.0.68"
time = "0.3.21"
tokio = {version = "1.28.2", features = ["full"] }
tracing = "0.1"
url = "2.4.0"
walker-common = "=0.6.0-alpha.6"
walker-extras = "=0.6.0-alpha.6"

trustification-auth = { path = "../../auth" }
trustification-infrastructure = { path = "../../infrastructure" }
